# der_die_das

./: .gitignore  README.md  pyproject.toml
data/: catalan_words_processed.csv  catalan_words_raw.csv  croatian_words_processed.csv  croatian_words_raw.csv  german_words_processed.csv  german_words_processed.txt  german_words_raw.txt  test.csv  test_cat.csv  test_cro.csv  train.csv  train_cat.csv  train_cro.csv
der-die-das/: README.md
src/der_die_das/: __main__.py  data_processing.py  evaluate.py  model.py  train.py  utils.py  visualizations_and_analysis.ipynb
