[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "der-die-das"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jsalvasoler", email = "jsalvasoler@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click",
    "pandas",
    "scikit-learn",
]

[project.urls]
Documentation = "https://github.com/jsalvasoler/der-die-das#readme"
Issues = "https://github.com/jsalvasoler/der-die-das/issues"
Source = "https://github.com/jsalvasoler/der-die-das"

[tool.hatch.version]
path = "src/der_die_das/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/der_die_das tests}"

[tool.hatch.envs.default.scripts]
interactive = "ipython"
der_die_das = "python3 -m der_die_das {args}"

[tool.coverage.run]
source_pkgs = ["der_die_das", "tests"]
branch = true
parallel = true
omit = [
  "src/der_die_das/__about__.py",
]

[tool.coverage.paths]
der_die_das = ["src/der_die_das", "*/der-die-das/src/der_die_das"]
tests = ["tests", "*/der-die-das/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
